# python-fastapi-template

./: .coveragerc  .dockerignore  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/api/: app.py  container.py  error_handlers.py
app/api/middlewares/: cors.py
app/api/routers/: public.py
app/config/: environment.py  types.py
app/core/: container.py  httpx.py
scripts/bash/: .bashrc
tests/: conftest.py
tests/api/: conftest.py
tests/core/: conftest.py
