[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Giovanni Armane <giovanniarmane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = "^4.37.0"
fastapi = {version = "^0.75.0", extras = ["ujson", "email_validator", "requests", "uvicorn"]}
httpx = "^0.22.0"
toolz = "^0.11.2"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
factory-boy = "^3.2.1"
Faker = "^13.3.3"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-mutable = "^1.2.0"
flake8-print = "^4.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-pytest-style = "^1.6.0"
flake8-return = "^1.1.3"
mypy = "^0.942"
pep8-naming = "^0.12.1"
pytest-asyncio = "^0.18.2"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-factoryboy = "^2.1.0"
pytest-mock = "^3.6.1"
pytest-picked = "^0.4.6"
pytest-randomly = "^3.11.0"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.5.0"
pytest = "^7.1.1"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--cov-config=.coveragerc",
    "--cov=app",
    "--cov-report=html:cov_html",
    "--cov-branch",
    "--cov-fail-under=90",
]
asyncio_mode="auto"
markers = [
    "integration: mark a test as an integration test",
    "unit: mark a test as an unit test",
    "e2e: mark a test as an end-to-end test",
]

[tool.poetry.scripts]
server = "scripts:server"
seeder = "scripts:seeder"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
